# plotly.cpp

./: .clang-format  .clang-format-ignore  .clang-tidy  .codecov.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
.github/actions/install-dependencies/: action.yml
.github/actions/setup-clang/: action.yml
.github/workflows/: ci.yml  doxygen.yml
cmake/: InstallConfig.cmake  PackageConfig.cmake  plotly-cppConfig.cmake.in
docs/: architecture.md  doxygen-awesome.css  header.html  mainpage.md
gallery/: CMakeLists.txt  README.md  gallery_2x2_subplots.cpp  gallery_3d_surface.cpp  gallery_3d_surface_plot.cpp  gallery_animate_sin_wave.cpp  gallery_box_violin_plots.cpp  gallery_clustering_animation.cpp  gallery_double_pendulum.cpp  gallery_duffing.cpp  gallery_event_handling.cpp  gallery_financial_candlestick.cpp  gallery_fractal.cpp  gallery_game_of_life.cpp  gallery_geographic_choropleth.cpp  gallery_golden_ratio.cpp  gallery_heatmap_correlation.cpp  gallery_hello_world.cpp  gallery_multi_trace_styling.cpp  gallery_parallel_coordinates.cpp  gallery_particle_physics_sim.cpp  gallery_polar_radar_chart.cpp  gallery_sankey_flow_diagram.cpp  gallery_scatter_bubble_chart.cpp  gallery_sin_curve.cpp  gallery_star.cpp  gallery_statistical_distributions.cpp  gallery_streaming_data.cpp  gallery_treemap_hierarchy.cpp
gallery/utils/: arg_parser.cpp  arg_parser.hpp  data_generators.cpp  data_generators.hpp  linspace.cpp  linspace.hpp
include/plotly/: abi_macros.hpp  logger.hpp  plotly.hpp  version.hpp.in
src/: logger.cpp  plotly.cpp
src/detail/: browser.cpp  browser.hpp  http_server.cpp  http_server.hpp  json_rpc.cpp  json_rpc.hpp  uuid.cpp  uuid.hpp  websockets_client.cpp  websockets_client.hpp  websockets_endpoint.cpp  websockets_endpoint.hpp  websockets_server.cpp  websockets_server.hpp
test/: CMakeLists.txt  test_figure.cpp  test_json_rpc.cpp  test_main.cpp  test_websocket.cpp
webapp/: bundle.js.LICENSE.txt  index.html
